Tests refactoring.